--- a/main.tex
+++ b/main.tex
@@ -392,7 +392,7 @@ keys]{ cryptocode }
 \end{frame}
 
 \begin{frame}
-    \frametitle{Discriminat}
+    \frametitle{Discriminant}
     \begin{definition}
         Let $E: y^2 = x^3 + a x + b$ be an elliptic curve.
 
